--- a/src/main/java/gui/chooseFile.fxml
+++ b/src/main/java/gui/chooseFile.fxml
@@ -2,25 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ChooseFileController">
     <AnchorPane layoutY="7.0" prefHeight="400.0" prefWidth="600.0">
         <Pane layoutX="200.0" layoutY="33.0" prefHeight="358.0" prefWidth="200.0">
-            <ComboBox fx:id="fileComboBox" layoutX="25.0" layoutY="14.0" onAction="#sourceFileChanged" prefWidth="150.0" />
+            <ComboBox fx:id="filesComboBox" layoutX="25.0" layoutY="14.0" onAction="#sourceFileChanged" prefWidth="150.0" />
             <Button fx:id="nextButton" layoutX="62.0" layoutY="276.0" mnemonicParsing="false" onAction="#nextButtonClicked" text="Refactor" />
          <ComboBox fx:id="classesComboBox" layoutX="25.0" layoutY="66.0" onAction="#sourceClassChanged" prefWidth="150.0" />
-         <MenuButton fx:id="statementsMenuButton" layoutX="38.0" layoutY="179.0" mnemonicParsing="false" text="MenuButton">
-           <items>
-             <MenuItem mnemonicParsing="false" text="Action 1" />
-             <MenuItem mnemonicParsing="false" text="Action 2" />
-           </items>
-         </MenuButton>
-         <ComboBox fx:id="destinationClasses" layoutX="24.0" layoutY="231.0" prefWidth="150.0" />
+         <ComboBox fx:id="destinationClasses" layoutX="24.0" layoutY="231.0" onAction="#destinationClassesChanged" prefWidth="150.0" />
          <ComboBox fx:id="refactorComboBox" layoutX="25.0" layoutY="118.0" onAction="#refactorComboBoxChanged" prefWidth="150.0" />
+         <AnchorPane fx:id="checkBoxAnchor" layoutY="165.0" prefHeight="55.0" prefWidth="200.0" />
         </Pane>
     </AnchorPane>
 </AnchorPane>
