--- a/src/main/resources/fxml/chooseFile.fxml
+++ b/src/main/resources/fxml/chooseFile.fxml
@@ -2,18 +2,49 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ChooseFileController">
-    <AnchorPane layoutY="7.0" prefHeight="400.0" prefWidth="600.0">
-        <Pane fx:id="mainPane" layoutX="200.0" layoutY="33.0" prefHeight="358.0" prefWidth="200.0">
-            <ComboBox fx:id="filesComboBox" layoutX="25.0" layoutY="14.0" onAction="#sourceFileChanged" prefWidth="150.0" />
-            <ComboBox fx:id="classesComboBox" layoutX="25.0" layoutY="66.0" onAction="#sourceClassChanged" prefWidth="150.0" />
-            <ComboBox fx:id="refactorComboBox" layoutX="25.0" layoutY="118.0" onAction="#refactorComboBoxChanged" prefWidth="150.0" />
-            <ComboBox fx:id="destinationClasses" layoutX="24.0" layoutY="231.0" onAction="#destinationClassesChanged" prefWidth="150.0" />
-            <Button fx:id="nextButton" layoutX="62.0" layoutY="276.0" mnemonicParsing="false" onAction="#nextButtonClicked" text="Refactor" />
-            <Pane fx:id="checkBoxPane" layoutY="166.0" prefHeight="44.0" prefWidth="200.0" />
-        </Pane>
+<AnchorPane prefHeight="734.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ChooseFileController">
+    <AnchorPane prefHeight="734.0" prefWidth="860.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <SplitPane dividerPositions="0.20081967213114754" orientation="VERTICAL" prefHeight="734.0" prefWidth="860.0" snapToPixel="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                    <children>
+                        <Label layoutX="559.0" layoutY="18.0" text="Destination class: " />
+                        <Label layoutX="262.0" layoutY="57.0" text="Statements to refactor: " />
+                        <Label layoutX="262.0" layoutY="18.0" text="Refactoring type: " />
+                        <Label layoutX="14.0" layoutY="56.0" text="Source class: " />
+                        <Label layoutX="14.0" layoutY="18.0" text="Source file:" />
+                        <ComboBox fx:id="destinationClasses" layoutX="677.0" layoutY="13.0" onAction="#destinationClassesChanged" prefWidth="150.0" />
+                        <Button fx:id="refactorButton" layoutX="380.0" layoutY="98.0" mnemonicParsing="false" onAction="#refactorButtonClicked" text="Refactor" />
+                        <ComboBox fx:id="refactorComboBox" layoutX="391.0" layoutY="13.0" onAction="#refactorComboBoxChanged" prefHeight="31.0" prefWidth="125.0" />
+                        <ComboBox fx:id="sourceFilesComboBox" layoutX="106.0" layoutY="13.0" onAction="#sourceFileChanged" prefHeight="31.0" prefWidth="134.0" />
+                        <Pane fx:id="checkBoxPane" layoutX="417.0" layoutY="45.0" prefHeight="44.0" prefWidth="99.0" />
+                        <ComboBox fx:id="classesComboBox" layoutX="106.0" layoutY="51.0" onAction="#sourceClassChanged" prefHeight="31.0" prefWidth="134.0" />
+                    </children>
+                </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                    <children>
+                        <SplitPane dividerPositions="0.4929906542056075" layoutX="273.0" layoutY="121.0" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <items>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                    <children>
+                                        <TextArea fx:id="sourceClassTextArea" layoutX="122.0" layoutY="90.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                    </children>
+                                </AnchorPane>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                    <children>
+                                        <TextArea fx:id="destClassTextArea" layoutX="56.0" layoutY="98.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                    </children>
+                                </AnchorPane>
+                            </items>
+                        </SplitPane>
+                    </children></AnchorPane>
+            </items>
+        </SplitPane>
     </AnchorPane>
 </AnchorPane>
