--- a/src/main/resources/fxml/chooseFile.fxml
+++ b/src/main/resources/fxml/chooseFile.fxml
@@ -14,17 +14,19 @@
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                     <children>
-                        <Label layoutX="559.0" layoutY="18.0" text="Destination class: " />
+                        <Label layoutX="560.0" layoutY="7.0" text="Destination class" />
                         <Label layoutX="262.0" layoutY="57.0" text="Statements to refactor: " />
                         <Label layoutX="262.0" layoutY="18.0" text="Refactoring type: " />
-                        <Label layoutX="14.0" layoutY="56.0" text="Source class: " />
+                        <Label layoutX="10.0" layoutY="47.0" text="Source class" />
                         <Label layoutX="14.0" layoutY="18.0" text="Source file:" />
-                        <ComboBox fx:id="destinationClasses" layoutX="677.0" layoutY="13.0" onAction="#destinationClassesChanged" prefWidth="150.0" />
+                        <ComboBox fx:id="destinationClasses" layoutX="677.0" layoutY="13.0" onAction="#destinationClassChanged" prefWidth="150.0" />
                         <Button fx:id="refactorButton" layoutX="380.0" layoutY="98.0" mnemonicParsing="false" onAction="#refactorButtonClicked" text="Refactor" />
                         <ComboBox fx:id="refactorComboBox" layoutX="391.0" layoutY="13.0" onAction="#refactorComboBoxChanged" prefHeight="31.0" prefWidth="125.0" />
                         <ComboBox fx:id="sourceFilesComboBox" layoutX="106.0" layoutY="13.0" onAction="#sourceFileChanged" prefHeight="31.0" prefWidth="134.0" />
                         <Pane fx:id="checkBoxPane" layoutX="417.0" layoutY="45.0" prefHeight="44.0" prefWidth="99.0" />
-                        <ComboBox fx:id="classesComboBox" layoutX="106.0" layoutY="51.0" onAction="#sourceClassChanged" prefHeight="31.0" prefWidth="134.0" />
+                        <ComboBox fx:id="sourceClasses" layoutX="106.0" layoutY="51.0" onAction="#sourceClassChanged" prefHeight="31.0" prefWidth="134.0" />
+                        <Label layoutX="9.0" layoutY="67.0" text="or interface: " />
+                        <Label layoutX="592.0" layoutY="28.0" text="or interface:" />
                     </children>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
