--- a/src/main/java/gui/chooseFile.fxml
+++ b/src/main/java/gui/chooseFile.fxml
@@ -5,28 +5,37 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
 <AnchorPane prefHeight="734.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ChooseFileController">
     <AnchorPane prefHeight="734.0" prefWidth="860.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <SplitPane dividerPositions="0.20081967213114754" orientation="VERTICAL" prefHeight="734.0" prefWidth="860.0" snapToPixel="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.23770491803278687" orientation="VERTICAL" prefHeight="734.0" prefWidth="860.0" snapToPixel="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                    <Label layoutX="560.0" layoutY="7.0" text="Destination class" />
-                    <Label layoutX="262.0" layoutY="57.0" text="Statements to refactor: " />
+                    <Label layoutX="576.0" layoutY="7.0" text="Base/sub class" />
+                    <Label layoutX="262.0" layoutY="74.0" text="Statements to refactor: " />
                     <Label layoutX="262.0" layoutY="18.0" text="Refactoring type: " />
-                    <Label layoutX="10.0" layoutY="47.0" text="Source class" />
+                    <Label layoutX="10.0" layoutY="67.0" text="Source class" />
                     <Label layoutX="14.0" layoutY="18.0" text="Source file:" />
-                     <ComboBox fx:id="destinationClasses" layoutX="677.0" layoutY="13.0" onAction="#destinationClassChanged" prefWidth="150.0" />
-                     <Button fx:id="refactorButton" layoutX="380.0" layoutY="98.0" mnemonicParsing="false" onAction="#refactorButtonClicked" text="Refactor" />
+                     <ComboBox fx:id="destinationClasses" layoutX="677.0" layoutY="13.0" onAction="#destinationClassChanged" prefHeight="31.0" prefWidth="150.0" />
+                     <Button fx:id="refactorButton" layoutX="380.0" layoutY="118.0" mnemonicParsing="false" onAction="#refactorButtonClicked" text="Refactor" />
                      <ComboBox fx:id="refactorComboBox" layoutX="391.0" layoutY="13.0" onAction="#refactorComboBoxChanged" prefHeight="31.0" prefWidth="125.0" />
                      <ComboBox fx:id="sourceFilesComboBox" layoutX="106.0" layoutY="13.0" onAction="#sourceFileChanged" prefHeight="31.0" prefWidth="134.0" />
-                     <Pane fx:id="checkBoxPane" layoutX="417.0" layoutY="45.0" prefHeight="44.0" prefWidth="99.0" />
-                     <ComboBox fx:id="sourceClasses" layoutX="106.0" layoutY="51.0" onAction="#sourceClassChanged" prefHeight="31.0" prefWidth="134.0" />
-                  <Label layoutX="9.0" layoutY="67.0" text="or interface: " />
+                     <Pane fx:id="checkBoxPane" layoutX="418.0" layoutY="63.0" prefHeight="44.0" prefWidth="99.0" />
+                     <ComboBox fx:id="sourceClasses" layoutX="106.0" layoutY="69.0" onAction="#sourceClassChanged" prefHeight="31.0" prefWidth="134.0" />
+                  <Label layoutX="9.0" layoutY="85.0" text="or interface: " />
                   <Label layoutX="592.0" layoutY="28.0" text="or interface:" />
+                  <Pane fx:id="delegatePane" layoutX="535.0" layoutY="45.0" prefHeight="109.0" prefWidth="292.0">
+                     <children>
+                        <Label fx:id="delegateLabel" layoutX="14.0" layoutY="22.0" text="Name of new class:" />
+                        <TextField fx:id="delegateClassNameTextField" layoutX="146.0" layoutY="17.0" prefHeight="31.0" prefWidth="142.0" />
+                        <Label fx:id="newFieldNameLabel" layoutX="15.0" layoutY="64.0" text="Name of new field:" />
+                        <TextField fx:id="delegateFieldNameTextField" layoutX="146.0" layoutY="59.0" prefHeight="31.0" prefWidth="142.0" />
+                     </children>
+                  </Pane>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
